force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Factura</label>
    <nameField>
        <displayFormat>I-{YY}{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>