force-app/main/default/objects/Invoice__c/fields/TipoDeFactura__c.field-meta.xml
<CustomField>
    <fullName>TipoDeFactura__c</fullName>
    <label>Tipo de factura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emitida</fullName>
            </value>
            <value>
                <fullName>Facturado</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>