force-app/main/default/objects/Invoice__c/recordTypes/Factura2.recordType-meta.xml
<RecordType>
    <fullName>Factura2</fullName>
    <active>true</active>
    <label>Factura 2</label>
</RecordType>