force-app/main/default/objects/Invoice__c/recordTypes/Facturas1.recordType-meta.xml
<RecordType>
    <fullName>Facturas1</fullName>
    <active>true</active>
    <label>Facturas 1</label>
</RecordType>