force-app/main/default/objects/Invoice__c/validationRules/CollectionDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectionDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   (CollectionDate__c &lt; TODAY())
)</errorConditionFormula>
    <errorDisplayField>CollectionDate__c</errorDisplayField>
    <errorMessage>Collection date cannot be less than today</errorMessage>
</ValidationRule>